<resources>
    <string name="tools_table">工作台</string>
    <string name="setting_center">设置中心</string>
    <string name="statistical_analysis">统计分析</string>
    <string name="cancel">取消</string>
    <string name="update">升级</string>
    <string name="input_required">请输入(必填)</string>
    <string name="select_required">请选择(必填)</string>
    <string name="input_normal">请输入</string>
    <string name="select_normal">请选择</string>
    <string name="confirm">确认</string>
    <string name="setting">设置</string>
    <string name="get_config_failed">获取配置信息失败</string>
    <string name="scan_code_failed">新增扫码数据失败</string>
    <string name="register_tips">为了保证设备的安全以及使用的程序的合法性,请进行备案注册登记</string>
    <string name="register_select_org_title">企业名称</string>
    <string name="register_select_org_system_tip">请选择品牌企业名称(必填)</string>
    <string name="register_waited_review_tip1">当前设备已提交注册,待审核中……</string>
    <string name="register_waited_review_tip2">如有问题请联系超级码售后处理.</string>
    <string name="register_refresh">刷新</string>
    <string name="register_register">注册</string>
    <string name="register_re_register">重新注册</string>
    <string name="register_failed">抱歉!当前设备注册不通过!</string>
    <string name="strong_password_remind">&#160;&#160;&#160;&#160;您好！为响应国家网络安全政策，提高信息的安全性，给您带来持续的优质服务，您的登录密码需要修改为强密码，密码设置需符合以下设置规则：\n 1、密码由8-20位字符组成。\n 2、密码要包含：大写字母+小写字母+特殊符号+数字四种组合。</string>
    <string name="login_phone_num_hint">请输入手机号</string>
    <string name="login_password_hit">请输入密码</string>
    <string name="login_remember_me">记住账号密码</string>
    <string name="login_button_text">登录</string>
    <string name="login_tip">技术支持：甲骨文科技股份\nCopyright 2005-2025 All Reserved</string>
    <string name="select_org_system_title">选择企业与系统</string>
    <string name="select_org_system_org">企业</string>
    <string name="select_org_system_org_hint">请选择企业</string>
    <string name="select_org_system_system">系统</string>
    <string name="select_org_system_system_hint">请选择系统</string>
    <string name="select_org_system_confirm">确定</string>
    <string name="select_org_system_tip">请选择企业</string>
    <string name="empty_data">暂无数据</string>
    <string name="product_select_title">产品列表</string>
    <string name="product_batch_select_title">产品批次列表</string>
    <string name="ware_house_select_title">仓库列表</string>
    <string name="customer_select_title">客户列表</string>
    <string name="store_place_select_title">库位列表</string>
    <string name="uuid_remark">为了保证设备的安全，请进行备案登记 \n 如有疑问请咨询超级码售后人员</string>
    <string name="uuid_register">备案注册</string>
    <string name="uuid_id">设备编号</string>
    <string name="stock_in_setting_title">入库设置</string>
    <string name="stock_in_product_name">产品名称</string>
    <string name="stock_in_product_name_hint">请选择产品名称(必填）</string>
    <string name="stock_in_product_batch">产品批次</string>
    <string name="stock_in_product_batch_hint">请选择批次</string>
    <string name="stock_in_store_name">仓库名称</string>
    <string name="stock_in_store_name_hint">请选择仓库(必填）</string>
    <string name="stock_in_store_place_name">库位名称</string>
    <string name="stock_in_store_place_name_hint">请选择库位</string>
    <string name="stock_in_remark">备注</string>
    <string name="stock_in_remark_hint">请输入备注信息</string>
    <string name="stock_in_next_step">下一步</string>
    <string name="supercode">超级码</string>
    <string name="stock_in_header_info">入库信息</string>
    <string name="stock_in_header_name">产品名称：</string>
    <string name="stock_in_header_batch">产品批次：</string>
    <string name="plan_number1">计划数量：</string>
    <string name="stock_in_header_ware_house_name">仓库名称：</string>
    <string name="stock_in_header_store_place_name">库位名称：</string>
    <string name="stock_in_PDA_title">入库</string>
    <string name="stock_in_PDA_title_right">设置</string>
    <string name="stock_action_no_data_tip1">请按扫描键扫码</string>
    <string name="stock_action_no_data_tip2">( 或手动输入物流码 )</string>
    <string name="pda_scan_checking">正在验证…</string>
    <string name="pda_scan_error_code_toast">身份码不存在!</string>
    <string name="pda_scan_input_code">手输</string>
    <string name="pda_scan_scan_back">反扫</string>
    <string name="pda_scan_scan_back_2">反扫删除</string>
    <string name="pda_scan_scan_back_3">重置耳号状态</string>
    <string name="pda_delete_watch">查看/删除</string>
    <string name="pda_upload">上传</string>
    <string name="pda_scan_in_sure">确定</string>
    <string name="pda_scan_in_tip">请按扫描键连续扫码（或手动添加身份码）</string>
    <string name="stock_in_pending_list_title">待执行入库列表</string>
    <string name="scan_back_tip">扫码逐个删除 请直接按扫码键</string>
    <string name="scan_back_return">返回</string>
    <string name="scan_back_delete_all">全删除</string>
    <string name="scan_back_title">删除</string>
    <string name="stock_return_setting_title">退货设置</string>
    <string name="stock_return_customer">退货客户：</string>
    <string name="stock_return_customer_key">退货客户</string>
    <string name="stock_return_customer_hint">请选择退货客户</string>
    <string name="stock_return_receiving_warehouse">收货仓库：</string>
    <string name="stock_return_receiving_warehouse_key">收货仓库</string>
    <string name="stock_return_receiving_warehouse_hint">请选择收货仓库(必填)</string>
    <string name="stock_return_header_info">退货信息</string>
    <string name="stock_return_pda_title">退货</string>
    <string name="stock_out_info">出库信息</string>
    <string name="label_edit_info">纠错信息</string>
    <string name="receiving_customer">收货客户</string>
    <string name="receiving_customer1">收货客户：</string>
    <string name="logistics_company">物流公司</string>
    <string name="logistics_company1">物流公司：</string>
    <string name="shipment_number">物流单号</string>
    <string name="plan_number">计划数量</string>
    <string name="plan_number_hint">请输入最小单位数量(必填）</string>
    <string name="shipment_number1">物流单号：</string>
    <string name="remark">备注</string>
    <string name="remark1">备注：</string>
    <string name="setting_receiver_hint">请选择收货客户(必填）</string>
    <string name="setting_logistics_company_hint">请选择物流公司</string>
    <string name="setting_code_hint">请扫描或输入物流单号</string>
    <string name="setting_remark_hint">请输入备注信息</string>
    <string name="next">下一步</string>
    <string name="previous">上一步</string>
    <string name="confirm_stock_out">确认出库</string>
    <string name="task_list_filter_type">类型</string>
    <string name="task_list_filter_type_item">类型：</string>
    <string name="task_list_filter_type_hint">请选择任务类型</string>
    <string name="task_list_filter_start_time">起始时间</string>
    <string name="task_list_filter_start_time_hint">请选择起始时间</string>
    <string name="task_list_filter_end_time">结束时间</string>
    <string name="task_list_filter_end_time_hint">请选择结束时间</string>
    <string name="task_list_item_upload_time">上传时间：</string>
    <string name="task_list_item_upload_count">上传数量：</string>
    <string name="task_list_item_success_count">执行成功：</string>
    <string name="task_list_item_operator">操作人：</string>
    <string name="task_list_title">任务状态</string>
    <string name="task_item_fail_info">失败详情</string>
    <string name="task_item_try_again">再次提交</string>
    <string name="update_fail_list_tip">以下为上传失败数据,请核对原因并重新处理</string>
    <string name="upload_fail_scan_hint">请按扫描键扫码或手动输入</string>
    <string name="upload_fail_choose_time">请选择时间</string>
    <string name="upload_fail_item_product">产品：</string>
    <string name="upload_fail_item_warehouse">仓库：</string>
    <string name="upload_fail_item_customer">客户：</string>
    <string name="upload_fail_item_upload_time">上传时间：</string>
    <string name="upload_fail_item_reason">失败原因：</string>
    <string name="upload_fail_item_related_level">关联级别：</string>
    <string name="upload_fail_item_parent">上级码：</string>
    <string name="upload_fail_item_out_warehouse">调出仓库：</string>
    <string name="upload_fail_item_in_warehouse">收货仓库：</string>
    <string name="upload_fail_item_out_customer">调出客户：</string>
    <string name="upload_fail_item_in_customer">收货客户：</string>
    <string name="upload_fail_title">上传失败日志</string>
    <string name="upload_fail_list_stock_in_title">入库失败日志</string>
    <string name="upload_fail_list_stock_out_title">出库失败日志</string>
    <string name="upload_fail_list_stock_return_title">退货失败日志</string>
    <string name="upload_fail_list_group_split_title">整组拆解失败日志</string>
    <string name="upload_fail_list_single_split_title">单个拆解失败日志</string>
    <string name="upload_fail_list_supplement_to_box_title">补码入箱失败日志</string>
    <string name="upload_fail_list_packaging_association_title">包装关联失败日志</string>
    <string name="upload_fail_list_exchange_warehouse_title">调仓失败日志</string>
    <string name="upload_fail_list_exchange_goods_title">调货失败日志</string>
    <string name="upload_fail_list_package_stock_in_title">包装入库失败日志</string>
    <string name="upload_fail_list_label_edit_title">标识纠错失败日志</string>
    <string name="upload_fail_list_in_warehouse_package_title">在库关联失败日志</string>
    <string name="upload_fail_list_relate_to_nfc_title">关联NFC失败日志</string>
    <string name="fail_log_stock_in">入库</string>
    <string name="fail_log_stock_in_packaged">生产入库</string>
    <string name="fail_log_stock_out">出库</string>
    <string name="fail_log_stock_out_fast">直接出库</string>
    <string name="fail_log_stock_return">退货</string>
    <string name="fail_log_group_split">整组拆解</string>
    <string name="fail_log_single_split">单个拆解</string>
    <string name="fail_log_supplement_to_box">补码入箱</string>
    <string name="fail_log_packaging_association">包装关联</string>
    <string name="fail_log_package_stock_in">包装入库</string>
    <string name="fail_log_exchange_warehouse">调仓</string>
    <string name="fail_log_exchange_goods">调货</string>
    <string name="fail_log_label_edit">标识纠错</string>
    <string name="fail_log_relate_to_nfc_id_code">身份码：</string>
    <string name="fail_log_relate_to_nfc_nfc_code">NFC：</string>
    <string name="fail_log_relate_to_nfc">关联NFC</string>
    <string name="fail_log_in_warehouse_package">在库关联</string>
    <string name="flow_query_setting_title">流向查询</string>
    <string name="flow_query_belongs">当前机构：</string>
    <string name="flow_query_identification_card">物&#160;&#160;流&#160;&#160;码：&#160;&#160;</string>
    <string name="productCount">数&#160;&#160;&#160;&#160;&#160;&#160;量&#160;&#160;&#160;&#160;：&#160;&#160;</string>
    <string name="packaging_today">今日包装</string>
    <string name="stock_in_today">今日入库</string>
    <string name="stock_out_today">今日出库</string>
    <string name="pas_product_name">产品名称</string>
    <string name="pas_product_name_hint">请选择产品名称(必填)</string>
    <string name="pas_product_batch">产品批次</string>
    <string name="pas_product_batch_hint">请选择产品批次</string>
    <string name="pas_association_level">关联级别</string>
    <string name="pas_association_level_hint">请选择关联级别(必填)</string>
    <string name="pas_packaging_specifications_number">1：</string>
    <string name="pas_packaging_specifications_text">零箱包装</string>
    <string name="pa_product_name">产品名称：</string>
    <string name="pa_product_batch">产品批次：</string>
    <string name="pa_packaging_specifications">包装规格：</string>
    <string name="pa_packaging_specifications_header_info">包装信息</string>
    <string name="pa_association_level">关联层级：</string>
    <string name="pa_box_code">盒码</string>
    <string name="pa_code">个码</string>
    <string name="single_disassemble_tip">仅支持输入下级码进行单个拆解</string>
    <string name="whole_group_disassemble_tip">仅支持输入上级码进行整组拆解</string>
    <string name="single_disassemble_title">单个拆解</string>
    <string name="whole_group_disassemble_title">整组拆解</string>
    <string name="stock_in_packaged_product_name_hint">请选择产品名称</string>
    <string name="exchange_warehouse_call_out_title">调出仓库</string>
    <string name="exchange_warehouse_call_out_content">请选择调出仓库(必填)</string>
    <string name="exchange_warehouse_call_in_title">收货仓库</string>
    <string name="exchange_warehouse_call_in_content">请选择收货仓库(必填)</string>
    <string name="exchange_warehouse_save_title">存放库位</string>
    <string name="exchange_warehouse_save_content">请选择存放库位</string>
</resources>