<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="data"
            type="com.jgw.delingha.sql.entity.ExchangeWarehouseConfigurationEntity" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/layout_toolbar" />

            <RelativeLayout style="@style/asp_rl">

                <TextView
                    android:id="@+id/tv_ew_out_title"
                    style="@style/asp_tv"
                    android:text="@string/exchange_warehouse_call_out_title" />

                <TextView
                    android:text="@{data.getDisplayOutWarehouse}"
                    android:id="@+id/tv_ew_out_value"
                    style="@style/asp_tv_value"
                    android:layout_toEndOf="@+id/tv_ew_out_title"
                    android:hint="@string/exchange_warehouse_call_out_content" />

                <ImageView style="@style/asp_image" />
            </RelativeLayout>

            <View style="@style/style_divider_horizontal" />

            <RelativeLayout style="@style/asp_rl">

                <TextView
                    android:id="@+id/tv_ew_in_title"
                    style="@style/asp_tv"
                    android:text="@string/exchange_warehouse_call_in_title" />

                <TextView
                    android:text="@{data.getDisplayInWarehouse}"
                    android:id="@+id/tv_ew_in_value"
                    style="@style/asp_tv_value"
                    android:layout_toEndOf="@+id/tv_ew_in_title"
                    android:hint="@string/exchange_warehouse_call_in_content" />

                <ImageView style="@style/asp_image" />
            </RelativeLayout>

            <View style="@style/style_divider_horizontal" />

            <RelativeLayout style="@style/asp_rl">

                <TextView
                    android:id="@+id/tv_ew_save_title"
                    style="@style/asp_tv"
                    android:text="@string/exchange_warehouse_save_title" />

                <TextView
                    android:text="@{data.getDisplayStoreHouse}"
                    android:id="@+id/tv_ew_save_value"
                    style="@style/asp_tv_value"
                    android:layout_toEndOf="@+id/tv_ew_save_title"
                    android:hint="@string/exchange_warehouse_save_content" />

                <ImageView style="@style/asp_image" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_gravity="bottom"
            android:id="@+id/tv_next_step"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/selector_btn_common"
            android:gravity="center"
            android:text="@string/stock_in_next_step"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </FrameLayout>
</layout>