<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="data"
            type="com.jgw.delingha.sql.entity.ConfigurationEntity" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:background="@color/white"
            android:orientation="vertical">

            <include layout="@layout/layout_toolbar" />

            <FrameLayout style="@style/style_stock_action_list_layout">

                <TextView
                    android:id="@+id/tv_stock_return_customer_title"
                    style="@style/style_stock_action_list_key"
                    android:text="@string/stock_return_customer_key" />

                <TextView
                    android:text="@{data.getCustomerText}"
                    android:id="@+id/tv_stock_return_customer_content"
                    style="@style/style_stock_action_list_value"
                    android:hint="@string/stock_return_customer_hint" />

                <ImageView style="@style/style_stock_action_list_icon" />
            </FrameLayout>

            <View style="@style/style_divider_horizontal" />

            <FrameLayout style="@style/style_stock_action_list_layout">

                <TextView
                    android:id="@+id/tv_stock_return_receiving_warehouse_title"
                    style="@style/style_stock_action_list_key"
                    android:text="@string/stock_return_receiving_warehouse_key" />

                <TextView
                    android:text="@{data.getWareHouseContentText}"
                    android:id="@+id/tv_stock_return_receiving_warehouse_content"
                    style="@style/style_stock_action_list_value"
                    android:hint="@string/stock_return_receiving_warehouse_hint" />

                <ImageView style="@style/style_stock_action_list_icon" />
            </FrameLayout>

            <View style="@style/style_divider_horizontal" />

            <FrameLayout
                android:id="@+id/fl_stock_return_store_house"
                style="@style/style_stock_action_list_layout">

                <TextView
                    android:id="@+id/tv_stock_return_store_house_title"
                    style="@style/style_stock_action_list_key"
                    android:text="@string/stock_in_store_place_name" />

                <TextView
                    android:text="@{data.getStockHouseName}"
                    android:id="@+id/tv_stock_return_store_house_content"
                    style="@style/style_stock_action_list_value"
                    android:hint="@string/stock_in_store_place_name_hint" />

                <ImageView style="@style/style_stock_action_list_icon" />
            </FrameLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_return_setting_next"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="15dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal|bottom"
            android:background="@drawable/selector_btn_common"
            android:stateListAnimator="@null"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </FrameLayout>

</layout>