<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="data"
            type="com.jgw.delingha.sql.entity.ConfigurationEntity" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:background="@color/white"
            android:orientation="vertical">

            <include layout="@layout/layout_toolbar" />

            <FrameLayout style="@style/style_stock_action_list_layout">

                <TextView
                    android:id="@+id/tv_stock_return_customer_title"
                    style="@style/style_stock_action_list_key"
                    android:text="@string/stock_return_customer_key" />

                <TextView
                    android:id="@+id/tv_stock_return_customer_content"
                    style="@style/style_stock_action_list_value"
                    android:hint="@string/stock_return_customer_hint"
                    android:text="@{data.getCustomerText}" />

                <ImageView style="@style/style_stock_action_list_icon" />
            </FrameLayout>

            <View style="@style/style_divider_horizontal" />

            <FrameLayout style="@style/style_stock_action_list_layout">

                <TextView
                    android:id="@+id/tv_stock_return_receiving_warehouse_title"
                    style="@style/style_stock_action_list_key"
                    android:text="@string/stock_return_receiving_warehouse_key" />

                <TextView
                    android:id="@+id/tv_stock_return_receiving_warehouse_content"
                    style="@style/style_stock_action_list_value"
                    android:hint="@string/stock_return_receiving_warehouse_hint"
                    android:text="@{data.getWareHouseContentText}" />

                <ImageView style="@style/style_stock_action_list_icon" />
            </FrameLayout>

            <View style="@style/style_divider_horizontal" />

            <FrameLayout
                android:id="@+id/fl_stock_return_store_house"
                style="@style/style_stock_action_list_layout">

                <TextView
                    android:id="@+id/tv_stock_return_store_house_title"
                    style="@style/style_stock_action_list_key"
                    android:text="@string/stock_in_store_place_name" />

                <TextView
                    android:id="@+id/tv_stock_return_store_house_content"
                    style="@style/style_stock_action_list_value"
                    android:hint="@string/stock_in_store_place_name_hint"
                    android:text="@{data.getStockHouseName}" />

                <ImageView style="@style/style_stock_action_list_icon" />
            </FrameLayout>

            <View style="@style/style_divider_horizontal" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/plan_number"
                    android:textColor="@color/gray_66"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_wanwei_stock_return_setting_plan_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="114dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/plan_number_hint"
                    android:inputType="number"
                    android:maxLength="6"
                    android:singleLine="true"
                    android:text="@{data.getPlanNumberText}"
                    android:textColor="@color/gray_33"
                    android:textColorHint="@color/gray_ab"
                    android:textSize="14sp" />

            </RelativeLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/tv_return_setting_next"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_margin="15dp"
            android:background="@drawable/selector_btn_common"
            android:gravity="center"
            android:stateListAnimator="@null"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </FrameLayout>

</layout>