<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="data"
            type="com.jgw.delingha.sql.entity.ConfigurationEntity" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:background="@color/white"
            android:orientation="vertical">

            <include layout="@layout/layout_toolbar" />

            <FrameLayout style="@style/style_stock_action_list_layout">

                <TextView
                    android:id="@+id/tv_store_name_desc"
                    style="@style/style_stock_action_list_key"
                    android:text="@string/stock_in_store_name" />

                <TextView
                    android:text="@{data.getWareHouseContentText}"
                    android:id="@+id/tv_store_name"
                    style="@style/style_stock_action_list_value"
                    android:hint="@string/stock_in_store_name_hint" />

                <ImageView style="@style/style_stock_action_list_icon" />
            </FrameLayout>

            <View style="@style/style_divider_horizontal" />

            <FrameLayout
                android:id="@+id/fl_store_place_name"
                style="@style/style_stock_action_list_layout">

                <TextView
                    android:id="@+id/tv_store_place_name_desc"
                    style="@style/style_stock_action_list_key"
                    android:text="@string/stock_in_store_place_name" />

                <TextView
                    android:text="@{data.getStockHouseName}"
                    android:id="@+id/tv_store_place_name"
                    style="@style/style_stock_action_list_value"
                    android:hint="@string/stock_in_store_place_name_hint" />

                <ImageView style="@style/style_stock_action_list_icon" />
            </FrameLayout>

            <View style="@style/style_divider_horizontal" />

            <FrameLayout style="@style/style_stock_action_list_layout">

                <TextView
                    android:id="@+id/tv_product_name_desc"
                    style="@style/style_stock_action_list_key"
                    android:text="@string/stock_in_product_name" />

                <TextView
                    android:text="@{data.getProductText}"
                    android:id="@+id/tv_product_name"
                    style="@style/style_stock_action_list_value"
                    android:hint="@string/stock_in_packaged_product_name_hint" />

                <ImageView style="@style/style_stock_action_list_icon" />
            </FrameLayout>

            <View style="@style/style_divider_horizontal" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:minHeight="100dp"
                android:paddingEnd="16dp">

                <TextView
                    android:id="@+id/tv_remarks_desc"
                    android:layout_width="64dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:maxLines="1"
                    android:text="@string/stock_in_remark"
                    android:textColor="@color/gray_66"
                    android:textSize="14sp" />

                <EditText
                    android:text="@={data.remark}"
                    android:id="@+id/et_remarks"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="114dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/stock_in_remark_hint"
                    android:maxLength="100"
                    android:textColor="@color/gray_33"
                    android:textColorHint="@color/gray_ab"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_next_step"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/selector_btn_common"
            android:gravity="center"
            android:text="@string/stock_in_next_step"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </FrameLayout>
</layout>